--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <title>React Starter Kit</title>
+      <title>Westwood Golf Club</title>
   </head>
   <body>
 
