--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-      <title>Westwood Golf Club</title>
+      <title></title>
   </head>
   <body>
     <div id="app"></div>
